--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front",
-  "homepage": "https://Vlad1m1rKolebakin.github.io/chatfront",
+  "homepage": "https://vovikchatik.ru",
   "private": true,
   "version": "0.0.0",
   "type": "module",
